# lovelace-fold-entity-row

./: .gitignore  .releaserc.yml  CHANGELOG.md  Makefile  README.md  fold-entity-row.js  package-lock.json  package.json  pyproject.toml  rollup.config.mjs
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.md
.github/workflows/: release.yml
docs/scenarios/: 01_basic_usage.yaml  02_head.yaml  03_head_2.yaml  04_group_config.yaml  05_padding.yaml  06_group_entity.yaml  07_nested_folds.yaml  08_auto_entities.yaml  09_uix_styling.yaml
src/: main.ts
tests/: README.md  conftest.py  ha_server.py  integrations.yaml  plugins.yaml
tests/ha-config/: configuration.yaml
tests/visual/: conftest.py  test_doc_images.py  test_scenarios.py
tests/visual/scenarios/: 01_basic_closed.yaml  02_basic_opened.yaml  03_head_entity_config.yaml  04_group_config.yaml  05_open_default.yaml  06_no_padding.yaml  07_group_entity.yaml  08_action_fold_toggle.yaml  09_state_color.yaml  10_section_head.yaml  11_clickable_config.yaml  12_config_errors.yaml  13_nested_folds.yaml  14_uix_styling.yaml  15_uix_group_config.yaml  16_uix_scrollbars.yaml  17_auto_entities.yaml  18_auto_entities_added_entity.yaml
