[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fold-entity-row"
version = "3.0.3"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "ha-testcontainer[test]==2.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"